--- a/Frontend/Client/src/App.css
+++ b/Frontend/Client/src/App.css
@@ -1,62 +1,4 @@
-@media screen and (max-width: 480px) {
-    /* Mobil */
-    .routes {
-        padding: 10px;
-        /* height: 100%; */
-    }
-}
-@media screen and (min-width: 481px) {
-    /* Desktop */
-    .routes {
-        padding: 10px 60px;
-        /* height: 90%; */
-        margin-top: 5px;
-    }
-}
-
-html {
-    overflow: hidden;
-}
-
-.AppContainer {
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    width: 100vw;
-    height: 100vh;
-}
-
-.App {
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    background-color: var(--backGroundColor);
-    overflow-x: hidden;
-    overflow-y: scroll;
-}
-.AlertClass {
-    position: fixed;
-    top: 100px;
-    left: 0;
-    /* right: 40%; */
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 2000;
-}
-
-.AlertClass .alertDiv {
-    min-width: 300px;
-    max-width: 450px;
-}
-.routes {
-    width: 100%;
-    min-height: 100vh;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    position: relative;
-    /* overflow-y: scroll; */
+*{
+    margin : 0;
+    padding:0;
 }
